home and detail

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.EcommerceApp">
-    
+
     <uses-permission android:name="android.permission.INTERNET" />
-    
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,23 +16,26 @@
         android:theme="@style/Theme.EcommerceApp"
         tools:targetApi="31">
         <activity
-            android:name="com.example.EcommerceApp.SellerActivity"
+            android:name=".Detail1Activity"
             android:exported="false" />
         <activity
-            android:name="com.example.EcommerceApp.UserActivity"
+            android:name=".SellerActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.EcommerceApp.SignIn_Activity"
+            android:name=".UserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SignIn_Activity"
             android:exported="false"
             android:label="@string/title_activity_sign_in"
             android:theme="@style/Theme.EcommerceApp" />
         <activity
-            android:name="com.example.EcommerceApp.SignUp_Activity"
+            android:name=".SignUp_Activity"
             android:exported="false"
             android:label="SignUp_Activity"
             android:theme="@style/Theme.EcommerceApp" />
         <activity
-            android:name="com.example.EcommerceApp.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.AnimatedSplash.SplashScreen">
             <intent-filter>
