--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EcommerceApp"
         tools:targetApi="31">
-
-
+        <activity
+            android:name=".SearchActivity"
+            android:exported="false" />
         <activity
             android:name=".Detail1Activity"
             android:exported="false" />
@@ -46,8 +47,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
     </application>
 
 </manifest>
