--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,25 @@
         android:theme="@style/Theme.EcommerceApp"
         tools:targetApi="31">
         <activity
+            android:name=".AllFavoriteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AllCategoryProduct"
+            android:exported="false" />
+        <activity
+            android:name=".DetailBagElectronicActivity"
+            android:exported="false"
+            android:label="@string/title_activity_bag_electronic_detail"
+            android:theme="@style/Theme.EcommerceApp" />
+        <activity
+            android:name=".DetailClothesSneakerActivity"
+            android:exported="false"
+            android:theme="@style/Theme.EcommerceApp" />
+        <activity
+            android:name=".DetailBookJewelryActivity"
+            android:exported="false"
+            android:theme="@style/Theme.EcommerceApp" />
+        <activity
             android:name=".ShopPageActivity"
             android:exported="false" />
         <activity
@@ -72,7 +91,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="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"/>
+            android:value="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" />
     </application>
 
 </manifest>
