--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         android:maxSdkVersion="32"
         tools:ignore="ScopedStorage" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -23,6 +22,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EcommerceApp"
         tools:targetApi="31">
+        <activity
+            android:name=".DetailOrder"
+            android:exported="false" />
         <activity
             android:name=".AddressSetting"
             android:exported="false" />
