--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.EcommerceApp" >
+    package="com.example.EcommerceApp">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -21,7 +21,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EcommerceApp"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".ShopDetailOrder"
+            android:exported="false" />
+        <activity
+            android:name=".OrderManagement"
+            android:exported="false" />
         <activity
             android:name=".MyCartActivity"
             android:exported="false" />
@@ -96,7 +102,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.AnimatedSplash.SplashScreen" >
+            android:theme="@style/Theme.AnimatedSplash.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
